--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,5 @@
 13. udkommentér ctrl shift 7
 14. lær GRAPHQL https://graphql.org/learn/1
 15. SASS SCSS ANIMATION https://glennmccomb.com/articles/creating-smooth-sequential-animations-with-sass/
+16. dividers https://codepen.io/isabelc/pen/MmrJgx
+17. responsive images https://css-tricks.com/a-guide-to-the-responsive-images-syntax-in-html/
